Component/ Input/ Responsive design/ server test file/ Emmet keyboard shortcut

--- a/Tools/Emmet Keyboard Shortcuts/Emmet keyboard shortcut.html
+++ b/Tools/Emmet Keyboard Shortcuts/Emmet keyboard shortcut.html
@@ -5,7 +5,7 @@
 	<title>Emmet Keyboard Shortcut</title>
 </head>
 <body>
-	<a href="http://docs.emmet.io" target="_blank">Emmet Documentation</a>
+	<a href="http://docs.emmet.io/cheat-sheet/" target="_blank">Emmet Documentation</a>
 	
 	
 <!--	a#btn-->
