--- a/Basic Html/Input/Input and Touch Keyboard.html
+++ b/Basic Html/Input/Input and Touch Keyboard.html
@@ -10,10 +10,9 @@
 
 <body>
     <div>
-        <label for="email">email:</label>
-        <input type="email">
-        <p>no capital</p>
+        <h1>Input and Touch Keyboard</h1>
     </div>
+
     <form>
         <ul>
             <li>
@@ -206,9 +205,52 @@
                 <p>定义搜索字段（比如站内搜索或谷歌搜索等）</p>
             </li>
 
-
+            <li>
+                <label for="">list </label>
+                <input list="browsers" name="browser">
+                <datalist id="browsers">
+                  <option value="Internet Explorer">
+                  <option value="Firefox">
+                  <option value="Chrome">
+                  <option value="Opera">
+                  <option value="Safari">
+                </datalist>
+                <p>带有 datalist 的表单.list 属性引用数据列表，其中包含输入字段的预定义选项。Safari/移动端不支持</p>
+            </li>
         </ul>
     </form>
+
+    <div>
+        <h1>
+            HTML select 标签
+        </h1>
+        <form>
+            <ul>
+                <li>
+                    <form>
+                        <select name="cars">
+                        <option value="volvo">Volvo</option>
+                        <option value="saab">Saab</option>
+                        <option value="fiat">Fiat</option>
+                        <option value="audi">Audi</option>
+                        </select>
+                    </form>
+                </li><br>
+          
+                <li>
+                    <form>
+                        <select size="3">
+                        <option value="volvo">Volvo</option>
+                        <option value="saab">Saab</option>
+                        <option value="fiat">Fiat</option>
+                        <option value="audi">Audi</option>
+                        </select>
+                    </form>
+                    <p>size 属性规定下拉列表中可见选项的数目。如果 size 属性的值大于 1，但是小于列表中选项的总数目，浏览器会显示出滚动条。移动端该效果不可用</p>
+                </li>
+            </ul>
+        </form>
+    </div>
 </body>
 
 </html>
