--- a/Basic Html/home.html
+++ b/Basic Html/home.html
@@ -7,6 +7,9 @@
         body{
             background-color: pink;
         }
+        ul{
+            list-style-type: none
+        }
     
     </style>
 
@@ -14,7 +17,7 @@
 
 <body>
     <p>this is my home page</p>
-    <ul>
+    <ul style="list-style-type=none">
         <li>Home page</li>
         <li><a href="page2.html">Page 2</a></li>
         <li><a href="page3.html">page 3</a></li>
