--- a/Test Field/play.html
+++ b/Test Field/play.html
@@ -1,49 +1,1 @@
-ASCII Value	URL-encode	ASCII Value	URL-encode	ASCII Value	URL-encode
- 	%90	À	%c0	ð	%f0
-‘	%91	Á	%c1	ñ	%f1
-’	%92	Â	%c2	ò	%f2
-“	%93	Ã	%c3	ó	%f3
-”	%94	Ä	%c4	ô	%f4
-•	%95	Å	%c5	õ	%f5
-–	%96	Æ	%c6	ö	%f6
-—	%97	Ç	%c7	÷	%f7
-˜	%98	È	%c8	ø	%f8
-™	%99	É	%c9	ù	%f9
-š	%9a	Ê	%ca	ú	%fa
-›	%9b	Ë	%cb	û	%fb
-œ	%9c	Ì	%cc	ü	%fc
- 	%9d	Í	%cd	ý	%fd
-ž	%9e	Î	%ce	þ	%fe
-Ÿ	%9f	Ï	%cf	ÿ	%ff
- 	%a0	Ð	%d0	 	 
-¡	%a1	Ñ	%d1	 	 
-¢	%a2	Ò	%d2	 	 
-£	%a3	Ó	%d3	 	 
- 	%a4	Ô	%d4	 	 
-¥	%a5	Õ	%d5	 	 
-|	%a6	Ö	%d6	 	 
-§	%a7	 	%d7	 	 
-¨	%a8	Ø	%d8	 	 
-©	%a9	Ù	%d9	 	 
-ª	%aa	Ú	%da	 	 
-«	%ab	Û	%db	 	 
-¬	%ac	Ü	%dc	 	 
-¯	%ad	Ý	%dd	 	 
-®	%ae	Þ	%de	 	 
-¯	%af	ß	%df	 	 
-°	%b0	à	%e0	 	 
-±	%b1	á	%e1	 	 
-²	%b2	â	%e2	 	 
-³	%b3	ã	%e3	 	 
-´	%b4	ä	%e4	 	 
-µ	%b5	å	%e5	 	 
-¶	%b6	æ	%e6	 	 
-·	%b7	ç	%e7	 	 
-¸	%b8	è	%e8	 	 
-¹	%b9	é	%e9	 	 
-º	%ba	ê	%ea	 	 
-»	%bb	ë	%eb	 	 
-¼	%bc	ì	%ec	 	 
-½	%bd	í	%ed	 	 
-¾	%be	î	%ee	 	 
-¿	%bf	ï	%ef	 	 
+how are you &#x27;qqq &#39;
