--- a/Basic/Typography/Typography.html
+++ b/Basic/Typography/Typography.html
@@ -19,7 +19,10 @@
 
 
     <h3>the cascade</h3>
-    <p>The “cascading” part of CSS is due to the fact that rules cascade down from multiple sources. </p>
+    
+    <p><span class="Hel">this is Helverica font class using &lt;span&gt;.</span></p>
+    
+    <p>The “cascading” part of CSS is due to the fact that rules cascade down from multiple sources.</p>
     <p>The CSS hierarchy for every web page looks like this:</p>
     <ul>
         <li>The browser’s default stylesheet</li>
