--- a/Basic/Typography/Typography.html
+++ b/Basic/Typography/Typography.html
@@ -14,11 +14,23 @@
 </head>
 
 <body>
-    <p id="fontstacktest">id = Font Stack Test - (A Font Stack is a list of fonts in a CSS font-family declaration.) 这是一段中文字体系统测试。</p>
+    <p id="fontstacktest">*id = Font Stack Test -这是一段中文字体系统测试。包括 English 标点(中文 ，：“”【】) (英文 , : "" *) 0123456789</p>
     <br>
+
     <br>
     <p id="fontstacktest">显示名称：TestABC123</p>
     <p id="fontstacktest">Secret:TestABC123</p>
+
+    <br>
+    <form>
+        <div>
+            <label>Text</label>China
+        </div>
+        <div>
+            <label class="required">Select</label><input type="text" class="inputtext">
+        </div>
+    </form>
+
 
 
 
